<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.arun.myportfolioapp.MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/heading"
        android:textSize="20sp"
        android:textColor="@color/primary_text"
        android:layout_marginTop="30dp"
        />
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/first_app"
        android:background="@color/accent"
        android:textColor="#fff"
        android:paddingLeft="5dp"
        android:paddingRight="5dp"
        android:textSize="18sp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginTop="20dp"
        android:id="@+id/popular_movies_app"
        android:onClick="showToast"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/second_app"
        android:background="@color/accent"
        android:textColor="#fff"
        android:paddingLeft="5dp"
        android:paddingRight="5dp"
        android:textSize="18sp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginTop="10dp"
        android:id="@+id/stock_hawk_app"
        android:onClick="showToast"/>
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/third_app"
        android:background="@color/accent"
        android:textColor="#fff"
        android:paddingLeft="5dp"
        android:paddingRight="5dp"
        android:textSize="18sp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginTop="10dp"
        android:id="@+id/build_it_bigger_app"
        android:onClick="showToast"/>
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/fourth_app"
        android:background="@color/accent"
        android:textColor="#fff"
        android:paddingLeft="5dp"
        android:paddingRight="5dp"
        android:textSize="18sp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginTop="10dp"
        android:id="@+id/material_app"
        android:onClick="showToast"/>
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/fifth_app"
        android:background="@color/accent"
        android:textColor="#fff"
        android:paddingLeft="5dp"
        android:paddingRight="5dp"
        android:textSize="18sp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginTop="10dp"
        android:id="@+id/go_ubiquitous_app"
        android:onClick="showToast"/>
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sixth_app"
        android:background="@color/accent"
        android:textColor="#fff"
        android:paddingLeft="5dp"
        android:paddingRight="5dp"
        android:textSize="18sp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginTop="10dp"
        android:id="@+id/capstone_app"
        android:onClick="showToast"/>

</LinearLayout>
